# test

./: test_login_response.py
api_test_framework/: .coverage  .env.example  .isort.cfg  .pylintrc  README.md  conftest.py  generate_allure_report.py  generate_simple_report.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api_test_framework/allure-report/: index.html
api_test_framework/allure-results/: 002ae9fb-ce5d-47ed-92d2-65f263d578f9-container.json  002d1546-88d2-4a75-a36e-d2d5d9721ce9-container.json  00302de4-6c30-4067-8423-b0d0410f96bf-container.json  008c4221-20d1-4f54-a295-dc27139a6ed3-attachment.txt  00a9ddcc-faa4-4228-a10e-aa79b3c9d483-attachment.json  00d1b6a1-7a2b-4a99-b795-c67b657a93f2-container.json  01306286-3991-477f-9a3f-a42e0b84a935-result.json  013f29de-9f00-459e-b74e-f69da264894e-container.json  0209b02f-a3c7-4004-9667-d6e10a25e41f-container.json  0225d648-2b6e-4b29-bf37-576c914d661c-container.json  02414e9f-0046-459c-968c-0fcb92429ed6-container.json  0250688e-3966-40e8-954d-42c717fb85a1-container.json  02c04190-390f-458a-a608-13bdf3b1202d-container.json  0311d0a4-d773-4514-a897-9bd99f2a8d11-result.json  031f8e8a-ab6e-4b2e-b64f-f0e2780a0296-result.json  032c3139-aa3d-4ee5-9a2a-c4da841bf318-container.json  03df96e8-0463-4357-aacb-9e80d36e626e-result.json  0410e9e2-cce8-4399-b414-5fc351e2e92c-attachment.txt  04180511-c754-47ea-bb1e-f4c0530cd9ab-result.json  041c530d-ac11-4cca-8234-ba17d05339f0-attachment.txt  053606d9-be17-487f-989d-654f013cd798-attachment.txt  063e7cd8-754a-402f-bcf7-5f88e96aa741-container.json  06805947-0ecd-470a-ae13-6718e8814615-result.json  07155e9e-8f0b-4a33-91fd-5eface77082a-result.json  072327d4-b151-4082-82c4-06fb9aed6465-container.json  07b9bec4-99b4-41cd-b952-756b5a961d29-container.json  085b3186-ea22-4c57-97ec-8c53e2ef1390-attachment.txt  08a27683-dbd6-4845-99a3-a06cad0672f3-result.json  08b95e4d-61c4-4d60-bfc3-ff29c8fe2549-attachment.txt  08ce1061-b851-4ab9-923d-855bcc028923-container.json  0add527b-4f0d-4e2d-9133-6ce8bcc090b5-container.json  0afbd2fe-36ed-4113-bb94-91b3a8a539ba-result.json  0b5154b0-d92f-48fb-a18f-fd8a06cf7e18-result.json  0b668c0e-d51d-46ab-8652-b9fbaa918c92-container.json  0b690f14-4942-4ed3-890e-835221a16b71-container.json  (+595 more)
(+5773 files in other folders)
